Setup wizard: add empty values for language, region (#803)
If the region is not set it would default to Afghanistan (the
first entry). Allow specifying none.

Add placeholder to location input.

Signed-off-by: Yannick Schaus <github@schaus.net>
Signed-off-by: Łukasz Dywicki <luke@code-house.org>
X-Backport-Id: 33a144223ad228c8e82435ca7ddd92cfea1e0eb4

--- a/bundles/org.opensmarthouse.ui/web/src/assets/i18n/setup-wizard/en.json
+++ b/bundles/org.opensmarthouse.ui/web/src/assets/i18n/setup-wizard/en.json
@@ -10,6 +10,7 @@
   "setupwizard.location.header1": "Would you like to share your home's location?",
   "setupwizard.location.header2": "It will help determining data dependent on your position, like sunrise/sunset times or the weather.",
   "setupwizard.location.parameterLabel": "Location of your home",
+  "setupwizard.location.placeholder": "<latitude>,<longitude>[,<altitude>]",
   "setupwizard.location.retrieveFromDevice": "Retrieve from This Device",
   "setupwizard.location.retrieveFromDevice.error": "Error while retrieving current position",
   "setupwizard.location.retrieveFromDevice.notAvailable.title": "Sorry",
